<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="button_login">LOG IN</string>
    <string name="button_register">REGISTER</string>
    <string name="userName">Name</string>
    <string name="userRepeatePassword">Repeate password</string>
    <string name="registerPage_title">Register</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="pratoDetailsDescription">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>