<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_loginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserEmail_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userEmail"
                android:textColor="@color/colorToolBar" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorToolBar" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorButtonLogin"
            android:text="@string/button_login"
            android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:text="OR"
                android:textColor="#000000" />

        <Button
            android:id="@+id/buttonregister_loginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/colorButtonRegister"
            android:text="@string/button_register"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>